<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yrj.manageproductrecycler.Login_Activity">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/tilUser"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentRight="true"
            android:id="@+id/etUser"
            android:layout_alignParentEnd="true"
            android:hint="@string/etUserHint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tilUser"
        android:layout_alignParentEnd="true"
        android:id="@+id/tilPass"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:id="@+id/etPass"
            android:ems="10"
            android:hint="@string/etPassHint"/>
    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:text="@string/cbRememberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPass"
        android:id="@+id/cbRemember"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


    <Button
        android:text="@string/btSubmitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btSubmit"
        android:layout_below="@id/cbRemember"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btlogin"/>
</RelativeLayout>
